--- a/.env_sample
+++ b/.env_sample
@@ -9,3 +9,10 @@ POSTGRES_DB=
 POSTGRES_HOST=
 POSTGRES_PORT=
 
+# Для создания админ пользователя
+User_admin_email=
+User_admin_first_name=
+User_admin_last_name=
+User_admin_is_staff=
+User_admin_is_superuser=
+User_admin_password=
